  - The informations fields in the properties dialog are now correctly aligned with their labels
* Updated libpng to v1.5.9
* Updated Little CMS to v2.3+ (git 839a5b0 23/03/2012)
* Updated ffmpeg
* Updated MediaInfoLib to v0.7.54
* Updated ZenLib to v0.4.25
* Updated VirtualDub to v1.10.2-test5
* New icons for the Windows 7 Taskbar
* Updated Polish, Japanese, Chinese Simplified, Chinese Traditional, Russian, Ukrainian,
  German, Slovak, French and Armenian translations
! Long opening of MKV files after using the "mkvclean" utility
! Incorrect detection of interlaced flag on some MPEG2 stream with DXVA decoder,
  fix choppy playback with incorrect frame rate
! MPASplitter can't split some .MP3 files
! MPCVideoDec switched to software decoding mode, even if only the DXVA decoder was
  selected, but wasn't supported
! MPEGSplitter can't load MPEG-TS files with corrupted packet header
  (incorrect Adaptation Field)
! Freeze occurs when madVR leaves exclusive mode
! MPCVideoDec bad playback with VC1 files with pulldown in MPEG-TS
! Ticket #413, #2096, Fixed register command line switches for audio and video files
! Ticket #1007, FLVSplitter: increased the depth of the search for audio and video tags
! Ticket #2007, Prevent a memory leak in FLACSource
! Ticket #2013, Bug when saving the ASS/SSA subtitle, the header has incorrect values
! Ticket #2014, Embedded subtitle overrides "Prefer external"
! Ticket #2047, Apply button under "EVR Sync Settings" can't be clicked
! Ticket #2057, Don't crash with some incomplete .AVI files
! Ticket #2057, MatroskaSplitter does not use properly cropping parameters
! Ticket #2064, CMD_SETPOSITION command does not start playback when paused
! Ticket #2080, Add fallback fonts for the MediaInfo tab in case Lucida Console is not available
! Ticket #2088, Fix a crash when double-clicking in the Organize Favorites dialog
  when the favorites list was empty
! Numerous other bugfixes and improvements